# django-starter

./: Procfile  pyproject.toml  requirements.txt  start.sh
a_core/: asgi.py  settings.py
a_rtchat/: consumers.py  forms.py  models.py  urls.py  views.py
a_rtchat/migrations/: 0001_initial.py  0002_chatgroup_users_online.py  0003_chatgroup_is_private_chatgroup_members_and_more.py  0004_alter_chatgroup_group_name.py
a_rtchat/templates/a_rtchat/: chat.html  chat_message_p.html
a_rtchat/templates/a_rtchat/partials/: chat_message_p.html  online_count.html
templates/: base.html
templates/includes/: header.html
